<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="onClick"
            type="android.view.View.OnClickListener"/>
    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/nombre"
            android:hint="@string/login_name"
            android:layout_marginBottom="@dimen/small"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/correo"
            android:hint="@string/login_email"
            android:layout_marginBottom="@dimen/small"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/usr"
            android:hint="@string/login_usr"
            android:layout_marginBottom="@dimen/small"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/pass"
            android:hint="@string/login_pass"
            android:layout_marginBottom="@dimen/medium"
            android:inputType="textPassword"
            />

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:text="@string/reg_btn"
            app:setOnClickListener="@{onClick}"
            />

    </TableLayout>
</layout>